Update home page url and trigger build

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tranlehaiduongict01.github.io/everjoy",
+  "homepage": "https://everjoyglobal.com",
   "name": "everjoy",
   "version": "0.1.0",
   "private": true,
